2020-18

* auto checkin pulled raw data
* documentation updates

2020-17 ☘️

* pulled data
* some reorganization of data folders
* add BC tests
* add data/cooked/cook.yaml to make datasets soft
* add AB tests
* pulled new data
* added missing country codes
* add SK tests
* ownership changed from dpjanes to Consensas
* add NS tests
* add MB tests
* add PE tests
* add NB tests

2020-16

* README + CHANGELOG
* remove old population dataset
* add StatsCan population + age cohorts
* add premier, CMO and COVID websites
* add testing (ON)
* expanding testing (ON)

2020-15 🔪🗡

* Initial version
* deaths / recoveries / cases
* doctors
* ICU
* population
* spending