@@ -1,8 +1,8 @@
 /*
- *  data/bc-covid/pull.js
+ *  data/bc-cmo/pull.js
  *
  *  David Janes
- *  IOTDB
+ *  Consensas
  *  2020-03-16
  *
  *  Copyright (2013-2020) David P. Janes
