@@ -1,8 +1,8 @@
 /*
- *  data/ca-cases/pull.js
+ *  data/on-cases/pull.js
  *
  *  David Janes
- *  IOTDB
+ *  Consensas
  *  2020-03-18
  *
  *  Copyright (2013-2020) David P. Janes
