@@ -2,7 +2,7 @@
  *  data/on-cmo/pull.js
  *
  *  David Janes
- *  IOTDB
+ *  Consensas
  *  2020-03-16
  *
  *  Copyright (2013-2020) David P. Janes
