@@ -2,6 +2,7 @@
 
 * auto checkin pulled raw data
 * documentation updates
+* update to Consensas
 
 2020-17 ☘️
 
